--- a/app/Resources/views/userpage.html.twig
+++ b/app/Resources/views/userpage.html.twig
@@ -66,7 +66,7 @@
         <div class="logo">
             <a href="/home" class="simple-text">
                 Task Manager
-                <h6>Current time: {{ "now"|date(" d/m/Y") }}</h6>
+                <h6>Today is: {{ "now"|date(" d/m/Y") }}</h6>
             </a>
         </div>
 
@@ -152,9 +152,8 @@
                             </div>
                     <div class="card-content table-responsive">
                         <h4>Number of tasks: {{ numberOfTasks }}</h4>
-                        <h5>Your points: {{ points }} ({{ points /50 }} task(-s) finished)</h5>
-
-                        <a href="/home">All</a><a> | </a><a href="/home/new">New</a><a> | </a><a href="/home/inprogress">In progress</a><a> | </a><a href="/home/finished">Finished</a>
+                        <h5>Your points: {{ points }} ({{ points /50 }} task(-s) finished ({{ (points/numberOfTasks*2)|number_format(2) }} %))! </h5>
+                        <a href="/home">All</a><a> | </a><a href="/home/new">New</a><a> | </a><a href="/home/inprogress">In progress</a><a> | </a><a href="/home/finished">Finished</a> | </a><a href="/home/endsToday">Ends Today</a>
                     <table class="table">
                         <thead class="text-primary">
                             <th>ID</th>
